Fixed the search query input max-width on mobiles

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -8,11 +8,11 @@
     .gallery__search-wrapper {
         display: flex;
         flex: 1;
-        max-width: 100%;
 
         .gallery__search-query {
             flex-grow: 1;
             height: 42px;
+            max-width: ~"calc(100% - 42px)";
         }
     
         .gallery__search-button {
